deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userapp
  template:
    metadata:
      labels:
        app: userapp
    spec:
      containers:
        - name: userapp
          image: andrey540/userapp:v1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
