ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: userapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/([^/]+)($|/)(.*)
            backend:
              serviceName: userapp-service
              servicePort: 8000
